--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1646,6 +1646,30 @@
     <!-- [CHAR LIMIT=40] Sound & display settings screen, title of dialog for picking font size -->
     <string name="dialog_title_font_size">Font size</string>
 
+
+	<!-- ***************************************************************************************** -->
+	<!-- *****************************  NEW TRANQUILITY SETTINGS   ******************************* -->
+	<!-- ***************************************************************************************** -->
+    <!-- Main Settings screen setting option name to go into the display settings screen -->
+    <string name="header_category_customize">Customize</string>
+
+    <!-- Statusbar Settings --><skip/>
+    <!-- Statusbar & toggles color and other options -->
+    <string name="statusbar_settings">Statusbar Settings</string>
+    
+    <string name="dialog_color_picker">Color Picker</string>
+    <string name="press_color_to_apply">Press on Color to apply</string>    
+    
+    <string name="numpicker_set">Set</string>
+    <string name="numpicker_ok">OK</string>
+
+
+
+	<!-- ***************************************************************************************** -->
+	<!-- ***************************************************************************************** -->
+
+
+
     <!-- SIM lock settings title -->
     <string name="sim_lock_settings">SIM card lock settings</string>
     <!-- Security & location settings screen, setting option name -->
