Changes for custom options

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3802,8 +3802,11 @@ found in the list of installed apps.</string>
     <string name="dialog_color_picker">Color Picker</string>
     <string name="press_color_to_apply">Press on Color to apply</string>    
     
-    <string name="numpicker_set">Set</string>
+    <string name="numpicker_set">Save</string>
+    <string name="numpicker_cancel">Cancel</string>
     <string name="numpicker_ok">OK</string>
+    <string name="carrier_size">Size of the Carrier text</string>
+    <string name="clock_size">Size of the Clock text</string>
 
     <!-- Tranquility Toolbox -->
     <string name="toolbox_settings">Tranquility Toolbox</string>
