--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3808,6 +3808,11 @@ found in the list of installed apps.</string>
     
     <string name="dialog_color_picker">Color Picker</string>
     <string name="press_color_to_apply">Press on Color to apply</string>    
+    <string name="arrow_right">→</string> 
+    <string name="arrow_down">↓</string>
+    <string name="hex">Hex:</string>
+    <string name="hex_hint">#FF000000</string>
+	<string name="ics_color">Stock</string>
 
     <string name="numpicker_ok">Set</string>
     <string name="carrier_size">Size of the Carrier text</string>
