Fix: Backup/Restore Junk Settings and themes
Change-Id: Iaedb0f4df17a6a1bdb7b7b6f1f0c57376f4f18a7

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3828,6 +3828,7 @@ found in the list of installed apps.</string>
 	<string name="led_off_ms">10ths of a second off</string>
 	
 	<string name="junk_settings_main">Customize Your Junk</string>
+	<string name="junk_settings_backup">Backup/Restore Junk</string>
 	<string name="junk_settings_clock">Statusbar Clock Settings</string>
 	<string name="junk_settings_pulldown">Statusbar Pulldown Settings</string>
 	<string name="junk_settings_toggles">Pulldown Toggle Settings</string>
